@@ -12,7 +12,7 @@ The new testsuite is in the test/ directory and uses the unittest module.
  - test/ contains the unittest modules
  - test/common.py contains common classes used in the unittest modules
  - test/main.py is the main test loader
- - python test/main.py runs the testsuite
+ - python test/main.py or trial test runs the testsuite
 
 Adding a test:
  - add a TestCase in test/test_(type).py
