@@ -1,4 +1,4 @@
-Processing module test_dict (test/input/test_dict.py)...
+Processing module test_dict (input/test_dict.py)...
 
 Warnings...
 
