@@ -1,8 +1,8 @@
-Processing module C (test/input/getmodule/A/C.py)...
-Processing module C (test/input/getmodule/B/C.py)...
+Processing module C (input/getmodule/A/C.py)...
+Processing module C (input/getmodule/B/C.py)...
 
 Warnings...
 
-test/input/getmodule/A/C.py:4: Imported module (time) not used
+input/getmodule/A/C.py:4: Imported module (time) not used
 
-test/input/getmodule/B/C.py:4: Imported module (os) not used
+input/getmodule/B/C.py:4: Imported module (os) not used
